Update button href to app.shribooks.com for login/register

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary">Try it free</a>
-                <a class="button is-link">Login</a>
+                <a class="button is-primary" href="https://app.shribooks.com/#!/register">Try it free</a>
+                <a class="button is-link" href="https://app.shribooks.com/#!/login">Login</a>
               </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
               </p>
               <br/>
               <p class="has-text-centered">
-                <a class="button is-link is-uppercase">Sign Up for free 7-day trial</a>
+                <a class="button is-link is-uppercase" href="https://app.shribooks.com/#!/register">Sign Up for free 7-day trial</a>
               </p>
             </div>
           </div>
@@ -159,7 +159,7 @@
       <div class="plan-item">Single Company & 1 user</div>
     </div>
     <div class="plan-footer">
-      <button class="button">Try it free</button>
+      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
     </div>
   </div>
 
@@ -175,7 +175,7 @@
       <div class="plan-item">2 users included</div>
     </div>
     <div class="plan-footer">
-      <button class="button">Try it free</button>
+      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
     </div>
   </div>
 
@@ -191,7 +191,7 @@
       <div class="plan-item">Premium Support</div>
     </div>
     <div class="plan-footer">
-      <button class="button">Try it free</button>
+      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
     </div>
   </div>
 </div>
