--- a/pricing/index.html
+++ b/pricing/index.html
@@ -40,8 +40,8 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary">Try it free</a>
-                <a class="button is-link">Login</a>
+                <a class="button is-primary" href="https://app.shribooks.com/#!/register">Try it free</a>
+                <a class="button is-link" href="https://app.shribooks.com/#!/login">Login</a>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
       <div class="plan-item">Single Company & 1 user</div>
     </div>
     <div class="plan-footer">
-      <button class="button">Try it free</button>
+      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
     </div>
   </div>
 
@@ -98,7 +98,7 @@
       <div class="plan-item">2 users included</div>
     </div>
     <div class="plan-footer">
-      <button class="button">Try it free</button>
+      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
     </div>
   </div>
 
@@ -114,7 +114,7 @@
       <div class="plan-item">Premium Support</div>
     </div>
     <div class="plan-footer">
-      <button class="button">Try it free</button>
+      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
     </div>
   </div>
 </div>
