--- a/404.html
+++ b/404.html
@@ -61,16 +61,16 @@
     <br/>
     <footer class="footer is-paddingless has-background-light">
       <div class="container">
-        <div class="columns is-tablet is-margin-8">
+        <div class="columns is-tablet mx-2 my-2">
           <div class="column is-2">
-            <h6 class="title is-6 is-marginless footer-title">ShriBooks</h6>
+            <h6 class="title is-6 is-marginless pb-2">ShriBooks</h6>
             <p><a href="/features">Features</a></p>
             <p><a href="/pricing">Pricing</a></p>
             <p><a href="/about">About Us</a></p>
           </div>
           
           <div class="column is-3">
-            <h6 class="title is-6 is-marginless footer-title">Community</h6>
+            <h6 class="title is-6 is-marginless pb-2">Community</h6>
             <p>
               <a href="/blog">
                 <span class="icon is-small has-text-danger"><i class="fas fa-rss"></i></span>
@@ -85,14 +85,14 @@
             </p>
           </div>
         </div>
-        <div class="has-text-centered is-margin-8">
+        <div class="has-text-centered mx-2 my-2">
           <a href="/terms-of-service">Terms of Service</a>
           |
           <a href="/privacy-policy">Privacy Policy</a>
           |
           <a href="/cookie-policy">Cookie Policy</a>
         </div>
-        <p class="has-text-centered">&copy;2020 ShriBooks Pvt Ltd. All Rights Reserved.</p>
+        <p class="has-text-centered">Copyright 2020-2021 &copy; ShriBooks Pvt Ltd. All Rights Reserved.</p>
       </div>
       <br/>
     </footer>
