--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </nav>
-    <div class="is-padding-8">
+    <div class="p-4">
       <div class="container">
         <div>
           <h1 class ="title">Cookie Policy</h1>
@@ -63,11 +63,11 @@
 <p><strong>a. Essential cookies</strong> to provide the service you have asked for. Some cookies are essential so you can navigate through the website and use its features. Without these cookies, we would not be able to provide the services you’ve requested. For example, some cookies allow us to identify subscribers and ensure they can access the subscription only pages. If a subscriber opts to disable these cookies, the user will not be able to access all of the content that a subscription entitles them to. These cookies don’t gather information about you that could be used for marketing or remembering where you’ve been on the internet. Essential cookies keep you logged in during your visit.</p>
 <p><strong>b. Preferences cookies</strong> to improve your browsing experience. We may use preferences cookies to remember information that changes the way the Service behaves or looks, such as the “remember me” functionality of a registered user or a user’s language preference. These cookies allow the website to remember choices you make, your settings, including marketing preferences, remembering if you’ve filled in certain forms, so you’re not asked to do it again.</p>
 <p><strong>c. Analytics cookies</strong>. To improve your experience on our Service, we like to keep track of what pages and links are popular and which ones don’t get used so much to help us keep our Service relevant and up to date. It’s also very useful to be able to identify trends of how people navigate (find their way through) our Service and if they get error messages from web pages. This group of cookies, often called “analytics cookies” are used to gather this information. These cookies don’t collect information that identifies you. The information collected is anonymous and is grouped with the information from everyone else’s cookies. We can then see the overall patterns of usage rather than any one person’s activity.</p>
-<h2 id="thirdparty-cookies">Third-party cookies</h2>
+<h2 id="third-party-cookies">Third-party cookies</h2>
 <p>In addition to our own cookies, we may also use various third-parties cookies to report usage statistics of the Service, deliver advertisements on and through the Service, and so on.</p>
 <h2 id="what-are-your-choices-regarding-cookies">What are your choices regarding cookies</h2>
 <p>If you’d like to delete cookies or instruct your web browser to delete or refuse cookies, please visit the help pages of your web browser.</p>
-<p>Please note, however, that if you delete cookies or refuse to accept them, you might not be able to use all of the features we offer, you may not be able to store your preferences, and some of our pages might not display properly.</p>
+<p>Please note, however, that if you delete cookies or refuse to accept them, you might not be able to use all the features we offer, you may not be able to store your preferences, and some of our pages might not display properly.</p>
 <pre><code>For the Chrome web browser, please visit this page from Google: https://support.google.com/accounts/answer/32050
 
 For the Internet Explorer web browser, please visit this page from Microsoft: http://support.microsoft.com/kb/278835
@@ -93,16 +93,16 @@ Network Advertising Initiative: http://www.networkadvertising.org/
     <br/>
     <footer class="footer is-paddingless has-background-light">
       <div class="container">
-        <div class="columns is-tablet is-margin-8">
+        <div class="columns is-tablet mx-2 my-2">
           <div class="column is-2">
-            <h6 class="title is-6 is-marginless footer-title">ShriBooks</h6>
+            <h6 class="title is-6 is-marginless pb-2">ShriBooks</h6>
             <p><a href="/features">Features</a></p>
             <p><a href="/pricing">Pricing</a></p>
             <p><a href="/about">About Us</a></p>
           </div>
           
           <div class="column is-3">
-            <h6 class="title is-6 is-marginless footer-title">Community</h6>
+            <h6 class="title is-6 is-marginless pb-2">Community</h6>
             <p>
               <a href="/blog">
                 <span class="icon is-small has-text-danger"><i class="fas fa-rss"></i></span>
@@ -117,14 +117,14 @@ Network Advertising Initiative: http://www.networkadvertising.org/
             </p>
           </div>
         </div>
-        <div class="has-text-centered is-margin-8">
+        <div class="has-text-centered mx-2 my-2">
           <a href="/terms-of-service">Terms of Service</a>
           |
           <a href="/privacy-policy">Privacy Policy</a>
           |
           <a href="/cookie-policy">Cookie Policy</a>
         </div>
-        <p class="has-text-centered">&copy;2020 ShriBooks Pvt Ltd. All Rights Reserved.</p>
+        <p class="has-text-centered">Copyright 2020-2021 &copy; ShriBooks Pvt Ltd. All Rights Reserved.</p>
       </div>
       <br/>
     </footer>
