--- a/features/index.html
+++ b/features/index.html
@@ -48,12 +48,12 @@
         </div>
       </div>
     </nav>
-    <div class="is-padding-8">
+    <div class="p-4">
       <div class="container">
         <div class="has-text-grey-dark has-text-centered">
           <br/>
           <p class="title is-3 is-marginless">Features to maintain your accounting records</p>
-          <p class="is-margin-8">Record transactions and access reports with simple and intuitive user interface</p>
+          <p class="mx-2 my-2">Record transactions and access reports with simple and intuitive user interface</p>
           <br/>
         </div>
         <div class="columns is-multiline is-marginless">
@@ -62,7 +62,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-landmark fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Multiple Companies</h4>
+              <h4 class="title is-4 is-marginless pb-2">Multiple Companies</h4>
             </div>
             <p class="has-text-justified">Setup & manage multiple companies using single login and add additional users
               based on growing company's needs. Easily configure master data, like functional currency, financial year,
@@ -74,7 +74,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-balance-scale fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Journal Entry</h4>
+              <h4 class="title is-4 is-marginless pb-2">Journal Entry</h4>
             </div>
             <p class="has-text-justified">Customize company Chart of Accounts based on your specific usage and
               maintain record of business transactions in a double entry accounting system using Journal Entries.
@@ -86,7 +86,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-file-invoice fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Account Receivables</h4>
+              <h4 class="title is-4 is-marginless pb-2">Account Receivables</h4>
             </div>
             <p class="has-text-justified">Create Customer master data with details like payment terms, address, etc.
               Issue Invoices and Credit Notes with taxes as applicable. Receive payments fully or partially and
@@ -98,7 +98,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-book-open fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Generate Tax Returns</h4>
+              <h4 class="title is-4 is-marginless pb-2">Generate Tax Returns</h4>
             </div>
             <p class="has-text-justified">Define single tax or associate sub taxes to be applied as Group Tax.
               Apply taxes on invoice lines to post into Input / Output Tax accounts. Generate Tax Returns for
@@ -110,7 +110,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-money-bill-wave fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Account Payables</h4>
+              <h4 class="title is-4 is-marginless pb-2">Account Payables</h4>
             </div>
             <p class="has-text-justified">Maintain Creditor master data and create Invoices or Debit Notes.
               Make Payments to these creditors fully or partially by matching payable entries and you can use A/P
@@ -122,7 +122,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-building fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Banking Transactions</h4>
+              <h4 class="title is-4 is-marginless pb-2">Banking Transactions</h4>
             </div>
             <p class="has-text-justified">Configure your Bank account master with all details and receive or pay amount
               to business partners by matching a/c entries fully or partially. Bank statements can be matched using
@@ -134,7 +134,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-coins fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Multiple Currencies</h4>
+              <h4 class="title is-4 is-marginless pb-2">Multiple Currencies</h4>
             </div>
             <p class="has-text-justified">Setup multiple currencies and maintain exchange rates from base currency.
               Generate unrealized gain/loss for outstanding forex amounts and exchange rate differences in transactions
@@ -146,7 +146,7 @@
               <span class="icon has-text-info">
                 <i class="fas fa-chart-line fa-3x"></i>
               </span>
-              <h4 class="title is-4 is-marginless footer-title">Reports</h4>
+              <h4 class="title is-4 is-marginless pb-2">Reports</h4>
             </div>
             <p class="has-text-justified">Generate Balance Sheet, Profit & Loss, Trial Balance reports with options
               to show monthly or yearly comparision data. View account transaction details in functional or transacted
@@ -159,16 +159,16 @@
     <br/>
     <footer class="footer is-paddingless has-background-light">
       <div class="container">
-        <div class="columns is-tablet is-margin-8">
+        <div class="columns is-tablet mx-2 my-2">
           <div class="column is-2">
-            <h6 class="title is-6 is-marginless footer-title">ShriBooks</h6>
+            <h6 class="title is-6 is-marginless pb-2">ShriBooks</h6>
             <p><a href="/features">Features</a></p>
             <p><a href="/pricing">Pricing</a></p>
             <p><a href="/about">About Us</a></p>
           </div>
           
           <div class="column is-3">
-            <h6 class="title is-6 is-marginless footer-title">Community</h6>
+            <h6 class="title is-6 is-marginless pb-2">Community</h6>
             <p>
               <a href="/blog">
                 <span class="icon is-small has-text-danger"><i class="fas fa-rss"></i></span>
@@ -183,14 +183,14 @@
             </p>
           </div>
         </div>
-        <div class="has-text-centered is-margin-8">
+        <div class="has-text-centered mx-2 my-2">
           <a href="/terms-of-service">Terms of Service</a>
           |
           <a href="/privacy-policy">Privacy Policy</a>
           |
           <a href="/cookie-policy">Cookie Policy</a>
         </div>
-        <p class="has-text-centered">&copy;2020 ShriBooks Pvt Ltd. All Rights Reserved.</p>
+        <p class="has-text-centered">Copyright 2020-2021 &copy; ShriBooks Pvt Ltd. All Rights Reserved.</p>
       </div>
       <br/>
     </footer>
