updated to bulma 1.0.2 and hugo 0.139.0

--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -20,7 +20,7 @@
             <img src="/images/navbar-logo.png">
           </a>
           <a class="navbar-item is-paddingless" href="/">
-            <strong class="is-size-4 has-text-link">ShriBooks</strong>
+            <strong class="is-size-4">ShriBooks</strong>
           </a>
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
             <span aria-hidden="true"></span>
@@ -33,7 +33,6 @@
             <div class="navbar-item is-hidden-touch"></div>
             <a class="navbar-item" href="/features">Features</a>
             <a class="navbar-item" href="/pricing">Pricing</a>
-            <a class="navbar-item" href="/blog">Blog</a>
             <a class="navbar-item" href="/about">About</a>
           </div>
           <div class="navbar-end">
@@ -41,6 +40,22 @@
               <div class="buttons">
                 <a class="button is-primary" href="https://app.shribooks.com/#!/register">Try it free</a>
                 <a class="button is-link" href="https://app.shribooks.com/#!/login">Login</a>
+              </div>
+            </div>
+            <div class="navbar-item has-dropdown is-hoverable is-hidden-touch">
+              <a class="navbar-link is-arrowless">
+                <span id="theme-icon" class="icon has-text-warning"><i></i></span>
+              </a>
+              <div class="navbar-dropdown is-boxed js-themes">
+                <a class="navbar-item" data-scheme="light">
+                  <span class="icon has-text-warning"><i class="fas fa-sun"></i></span>Light
+                </a>
+                <a class="navbar-item" data-scheme="dark">
+                  <span class="icon has-text-link"><i class="fas fa-moon"></i></span>Dark
+                </a>
+                <a class="navbar-item" data-scheme="system">
+                  <span class="icon has-text-primary"><i class="fas fa-desktop"></i></span>System
+                </a>
               </div>
             </div>
           </div>
@@ -52,7 +67,7 @@
         <div>
           <h1 class ="title">Cookie Policy</h1>
           <div class="content has-text-justified">
-            <p>ShriBooks Pvt Ltd (“ShriBooks”, “us”, “we”, or “our”) operates the ShriBooks website and the ShriBooks APIs  (collectively, the “Service”). By using the Service, you consent to the use of cookies.</p>
+            <p>ShriBooks (“ShriBooks”, “us”, “we”, or “our”) operates the ShriBooks website and the ShriBooks APIs  (collectively, the “Service”). By using the Service, you consent to the use of cookies.</p>
 <p>Our Cookie Policy explains what cookies are, how we use cookies, how third-parties we may partner with may use cookies on the Service, your choices regarding cookies and further information about cookies.</p>
 <h2 id="what-are-cookies">What are cookies</h2>
 <p>Cookies are small pieces of text sent to your web browser by a website you visit. A cookie file is stored in your web browser and allows the Service or a third-party to recognize you and make your next visit easier and the Service more useful to you.</p>
@@ -91,7 +106,7 @@ Network Advertising Initiative: http://www.networkadvertising.org/
       </div>
     </div>
     <br/>
-    <footer class="footer is-paddingless has-background-light">
+    <footer class="footer is-paddingless">
       <div class="container">
         <div class="columns is-tablet mx-2 my-2">
           <div class="column is-2">
@@ -104,15 +119,9 @@ Network Advertising Initiative: http://www.networkadvertising.org/
           <div class="column is-3">
             <h6 class="title is-6 is-marginless pb-2">Community</h6>
             <p>
-              <a href="/blog">
-                <span class="icon is-small has-text-danger"><i class="fas fa-rss"></i></span>
-                Blog / News
-              </a>
-            </p>
-            <p>
-              <a href="https://twitter.com/ShriBooks" target="_blank" title="Follow @ShriBooks">
-                <span class="icon is-small has-text-info"><i class="fab fa-twitter"></i></span>
-                Follow @ShriBooks
+              <a href="https://github.com/pustike" target="_blank" title="Pustike @ GitHub">
+                <span class="icon is-small has-text-info"><i class="fab fa-github"></i></span>
+                Pustike @ GitHub
               </a>
             </p>
           </div>
@@ -124,7 +133,7 @@ Network Advertising Initiative: http://www.networkadvertising.org/
           |
           <a href="/cookie-policy">Cookie Policy</a>
         </div>
-        <p class="has-text-centered">Copyright 2020-2021 &copy; ShriBooks Pvt Ltd. All Rights Reserved.</p>
+        <p class="has-text-centered">Copyright 2021-2024 &copy; ShriBooks. All Rights Reserved.</p>
       </div>
       <br/>
     </footer>
