--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
             <img src="/images/navbar-logo.png">
           </a>
           <a class="navbar-item is-paddingless" href="/">
-            <strong class="is-size-4 has-text-link">ShriBooks</strong>
+            <strong class="is-size-4">ShriBooks</strong>
           </a>
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
             <span aria-hidden="true"></span>
@@ -33,7 +33,6 @@
             <div class="navbar-item is-hidden-touch"></div>
             <a class="navbar-item" href="/features">Features</a>
             <a class="navbar-item" href="/pricing">Pricing</a>
-            <a class="navbar-item" href="/blog">Blog</a>
             <a class="navbar-item" href="/about">About</a>
           </div>
           <div class="navbar-end">
@@ -41,6 +40,22 @@
               <div class="buttons">
                 <a class="button is-primary" href="https://app.shribooks.com/#!/register">Try it free</a>
                 <a class="button is-link" href="https://app.shribooks.com/#!/login">Login</a>
+              </div>
+            </div>
+            <div class="navbar-item has-dropdown is-hoverable is-hidden-touch">
+              <a class="navbar-link is-arrowless">
+                <span id="theme-icon" class="icon has-text-warning"><i></i></span>
+              </a>
+              <div class="navbar-dropdown is-boxed js-themes">
+                <a class="navbar-item" data-scheme="light">
+                  <span class="icon has-text-warning"><i class="fas fa-sun"></i></span>Light
+                </a>
+                <a class="navbar-item" data-scheme="dark">
+                  <span class="icon has-text-link"><i class="fas fa-moon"></i></span>Dark
+                </a>
+                <a class="navbar-item" data-scheme="system">
+                  <span class="icon has-text-primary"><i class="fas fa-desktop"></i></span>System
+                </a>
               </div>
             </div>
           </div>
@@ -58,11 +73,10 @@
 <p>We would love to hear from you. Just send us a message using any of the following channels.</p>
 <p>If you are an existing customer and need technical support, please contact us through the support email.</p>
 <h6 id="address">Address:</h6>
-<pre><code>ShriBooks Pvt Ltd
-No. 31/12 &amp; 31/13, Hora Residency,
-6th Cross, 1st Main, 
-Poorna Prajna Nagar, Uttarahalli, 
-Bengaluru, Karnataka 560061, India
+<pre tabindex="0"><code>ShriBooks
+Gopalan Florenza, Ganakal Village,
+Banashankari 6th stage, Srinivaspura, 
+Bengaluru, Karnataka 560060, India
 </code></pre><h6 id="email">Email:</h6>
 <ul>
 <li>Sales: <code>sales at shribooks.com</code></li>
@@ -71,8 +85,7 @@ Bengaluru, Karnataka 560061, India
 </ul>
 <h6 id="community">Community:</h6>
 <ul>
-<li>GitHub: <!-- raw HTML omitted -->github.com/pustike<!-- raw HTML omitted --></li>
-<li>Twitter: <!-- raw HTML omitted -->@ShriBooks<!-- raw HTML omitted --></li>
+<li>GitHub: <a href="https://github.com/pustike" target="_blank">github.com/pustike</a></li>
 </ul>
 
           </div>
@@ -80,7 +93,7 @@ Bengaluru, Karnataka 560061, India
       </div>
     </div>
     <br/>
-    <footer class="footer is-paddingless has-background-light">
+    <footer class="footer is-paddingless">
       <div class="container">
         <div class="columns is-tablet mx-2 my-2">
           <div class="column is-2">
@@ -93,15 +106,9 @@ Bengaluru, Karnataka 560061, India
           <div class="column is-3">
             <h6 class="title is-6 is-marginless pb-2">Community</h6>
             <p>
-              <a href="/blog">
-                <span class="icon is-small has-text-danger"><i class="fas fa-rss"></i></span>
-                Blog / News
-              </a>
-            </p>
-            <p>
-              <a href="https://twitter.com/ShriBooks" target="_blank" title="Follow @ShriBooks">
-                <span class="icon is-small has-text-info"><i class="fab fa-twitter"></i></span>
-                Follow @ShriBooks
+              <a href="https://github.com/pustike" target="_blank" title="Pustike @ GitHub">
+                <span class="icon is-small has-text-info"><i class="fab fa-github"></i></span>
+                Pustike @ GitHub
               </a>
             </p>
           </div>
@@ -113,7 +120,7 @@ Bengaluru, Karnataka 560061, India
           |
           <a href="/cookie-policy">Cookie Policy</a>
         </div>
-        <p class="has-text-centered">Copyright 2020-2021 &copy; ShriBooks Pvt Ltd. All Rights Reserved.</p>
+        <p class="has-text-centered">Copyright 2021-2024 &copy; ShriBooks. All Rights Reserved.</p>
       </div>
       <br/>
     </footer>
