--- a/pricing/index.html
+++ b/pricing/index.html
@@ -21,7 +21,7 @@
             <img src="/images/navbar-logo.png">
           </a>
           <a class="navbar-item is-paddingless" href="/">
-            <strong class="is-size-4 has-text-link">ShriBooks</strong>
+            <strong class="is-size-4">ShriBooks</strong>
           </a>
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
             <span aria-hidden="true"></span>
@@ -34,7 +34,6 @@
             <div class="navbar-item is-hidden-touch"></div>
             <a class="navbar-item" href="/features">Features</a>
             <a class="navbar-item" href="/pricing">Pricing</a>
-            <a class="navbar-item" href="/blog">Blog</a>
             <a class="navbar-item" href="/about">About</a>
           </div>
           <div class="navbar-end">
@@ -42,6 +41,22 @@
               <div class="buttons">
                 <a class="button is-primary" href="https://app.shribooks.com/#!/register">Try it free</a>
                 <a class="button is-link" href="https://app.shribooks.com/#!/login">Login</a>
+              </div>
+            </div>
+            <div class="navbar-item has-dropdown is-hoverable is-hidden-touch">
+              <a class="navbar-link is-arrowless">
+                <span id="theme-icon" class="icon has-text-warning"><i></i></span>
+              </a>
+              <div class="navbar-dropdown is-boxed js-themes">
+                <a class="navbar-item" data-scheme="light">
+                  <span class="icon has-text-warning"><i class="fas fa-sun"></i></span>Light
+                </a>
+                <a class="navbar-item" data-scheme="dark">
+                  <span class="icon has-text-link"><i class="fas fa-moon"></i></span>Dark
+                </a>
+                <a class="navbar-item" data-scheme="system">
+                  <span class="icon has-text-primary"><i class="fas fa-desktop"></i></span>System
+                </a>
               </div>
             </div>
           </div>
@@ -68,60 +83,75 @@
           <label>Annual Billing</label>
           <span class="tag is-info is-light">(Save two months)</span>
         </div>
-        
-<div class="pricing-table">
-  <div class="pricing-plan is-info">
-    <div class="plan-header">Starter</div>
-    <div class="plan-price" id="starter-plan">
-      <span class="plan-price-amount"><span class="plan-price-currency">₹</span>250</span><br/>Per Month
+        <div class="fixed-grid has-3-cols has-1-cols-mobile mt-4">
+  <div class="grid has-text-centered is-gap-2">
+    <div class="cell">
+      <div class="panel py-4">
+        <p class="panel-heading">Starter</p>
+        <div class="columns is-multiline is-gapless">
+          <div class="column is-12">
+            <span class="has-text-weight-bold">₹<span class="is-size-2" id="starter-plan">250</span> </span>
+          </div>
+          <div class="column"><span class="is-size-7" id="starter-plan-txt">Per Month</span></div>
+        </div>
+        <table class="table is-fullwidth is-striped is-bordered"><tbody>
+          <tr><td>Journal Entries</td></tr>
+          <tr><td>A/R, A/P and Banking features</td></tr>
+          <tr><td>Multiple Currencies</td></tr>
+          <tr><td>Single Company & 1 user</td></tr>
+        </tbody></table>
+        <div class="panel-block">
+          <a class="button is-fullwidth is-link is-light" href="https://app.shribooks.com/#!/register">Try it free</a>
+        </div>
+      </div>
     </div>
-    <div class="plan-items">
-      <div class="plan-item">Journal Entries</div>
-      <div class="plan-item">A/R, A/P and Banking features</div>
-      <div class="plan-item">Multiple Currencies</div>
-      <div class="plan-item">Single Company & 1 user</div>
+    <div class="cell">
+      <article class="panel is-info">
+        <p class="panel-heading">Standard</p>
+        <div class="columns is-multiline is-gapless">
+          <div class="column is-12">
+            <span class="has-text-weight-bold">₹<span class="is-size-2" id="standard-plan">500</span></span>
+          </div>
+          <div class="column"><span class="is-size-7" id="standard-plan-txt">Per Company / Month</span></div>
+        </div>
+        <table class="table is-fullwidth is-striped is-bordered"><tbody>
+          <tr><td>All features in Starter Plan +</td></tr>
+          <tr><td>Taxes module for GST reporting</td></tr>
+          <tr><td>Manage multiple Companies</td></tr>
+          <tr><td>2 users included</td></tr>
+        </tbody></table>
+        <div class="panel-block">
+          <a class="button is-fullwidth is-info is-light" href="https://app.shribooks.com/#!/register">Try it free</a>
+        </div>
+      </article>
     </div>
-    <div class="plan-footer">
-      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
-    </div>
-  </div>
-
-  <div class="pricing-plan is-active">
-    <div class="plan-header">Standard</div>
-    <div class="plan-price" id="standard-plan">
-      <span class="plan-price-amount"><span class="plan-price-currency">₹</span>500</span><br/>Per Company / Month
-    </div>
-    <div class="plan-items">
-      <div class="plan-item">All features in Starter Plan +</div>
-      <div class="plan-item">Taxes module for GST reporting</div>
-      <div class="plan-item">Manage multiple Companies</div>
-      <div class="plan-item">2 users included</div>
-    </div>
-    <div class="plan-footer">
-      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
-    </div>
-  </div>
-
-  <div class="pricing-plan">
-    <div class="plan-header">Premium</div>
-    <div class="plan-price is-size-4">
-      <span class="plan-price-amount"></span>Contact us
-    </div>
-    <div class="plan-items">
-      <div class="plan-item">All features in Standard Plan +</div>
-      <div class="plan-item">Dedicated server hosting</div>
-      <div class="plan-item">Custom Domain</div>
-      <div class="plan-item">Premium Support</div>
-    </div>
-    <div class="plan-footer">
-      <a class="button" href="https://app.shribooks.com/#!/register">Try it free</a>
+    <div class="cell">
+      <article class="panel is-warning py-4">
+        <p class="panel-heading">Premium</p>
+        <div class="columns is-multiline is-gapless">
+          <div class="column is-12">
+            <span class="is-size-2">Contact us</span>
+          </div>
+          <div class="column">&nbsp;</div>
+        </div>
+        <table class="table is-fullwidth is-striped is-bordered"><tbody>
+          <tr><td>All features in Standard Plan +</td></tr>
+          <tr><td>Dedicated server hosting</td></tr>
+          <tr><td>Custom Domain</td></tr>
+          <tr><td>Premium Support</td></tr>
+        </tbody></table>
+        <div class="panel-block">
+          <a class="button is-fullwidth is-warning is-light" href="https://app.shribooks.com/#!/register">Try it free</a>
+        </div>
+      </article>
     </div>
   </div>
 </div>
+
       </div>
     </div>
     <p class="title is-3 has-text-centered">Frequently Asked Questions</p>
-    <div class="divider">Trial</div>
+    <div class="divider has-text-weight-bold">Trial</div>
     <div class="columns is-multiline">
       <div class="column is-6">
         <p class="has-text-weight-bold">How does the 7-day free trial work?</p>
@@ -148,7 +178,7 @@
         </p>
       </div>
     </div>
-    <div class="divider">Subscription</div>
+    <div class="divider has-text-weight-bold">Subscription</div>
     <div class="columns is-multiline">
       <div class="column is-6">
         <p class="has-text-weight-bold">Which payment modes do you support?</p>
@@ -176,7 +206,7 @@
   </div>
 </div>
     <br/>
-    <footer class="footer is-paddingless has-background-light">
+    <footer class="footer is-paddingless">
       <div class="container">
         <div class="columns is-tablet mx-2 my-2">
           <div class="column is-2">
@@ -189,15 +219,9 @@
           <div class="column is-3">
             <h6 class="title is-6 is-marginless pb-2">Community</h6>
             <p>
-              <a href="/blog">
-                <span class="icon is-small has-text-danger"><i class="fas fa-rss"></i></span>
-                Blog / News
-              </a>
-            </p>
-            <p>
-              <a href="https://twitter.com/ShriBooks" target="_blank" title="Follow @ShriBooks">
-                <span class="icon is-small has-text-info"><i class="fab fa-twitter"></i></span>
-                Follow @ShriBooks
+              <a href="https://github.com/pustike" target="_blank" title="Pustike @ GitHub">
+                <span class="icon is-small has-text-info"><i class="fab fa-github"></i></span>
+                Pustike @ GitHub
               </a>
             </p>
           </div>
@@ -209,7 +233,7 @@
           |
           <a href="/cookie-policy">Cookie Policy</a>
         </div>
-        <p class="has-text-centered">Copyright 2020-2021 &copy; ShriBooks Pvt Ltd. All Rights Reserved.</p>
+        <p class="has-text-centered">Copyright 2021-2024 &copy; ShriBooks. All Rights Reserved.</p>
       </div>
       <br/>
     </footer>
